# FolderMergerPlus

./: CMakeLists.txt  NOTES.txt  TODO
cfg/: config.ini
src/: main.cpp
src/album_manager/: app.cpp  app.hpp  pages.hpp
src/album_manager/pages/: home_page.hpp
src/core/: config.cpp  config.hpp  utils.cpp  utils.hpp
src/folder_merger_plus/: app.hpp
src/ui/: app.cpp  app.hpp
src/ui/pages/: home_page.cpp
